# QuadCoreTeam

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.xml  Workflow Example.xml  client  client_side.c  common.c  common.h  server  server_side.c  t_c.c  test_client.c  test_server.c
scheme/: Login_logout.xml  Workflow Example.xml
